--- a/src/components/home-container/gallery/item-list/ItemList.css
+++ b/src/components/home-container/gallery/item-list/ItemList.css
@@ -23,3 +23,9 @@
     box-shadow: none;
     background-color: #fff9f7;
 }
+
+.spacer {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
